# proxy-manager

./: .gitignore  README.md  setup.cfg  setup.py  test_package.py
proxy_manager/: __init__.py  checker.py  collector.py  manager.py  models.py  proxy.py
proxy_manager/sources/: __init__.py  base.py  freeproxylist.py  geonode.py  github.py  proxylist_download.py
tests/: conftest.py
tests/unit/: test_checker.py  test_collector.py  test_manager.py
